@@ -28,11 +28,13 @@
 
     <property name="spotlight" value="${module}/spotlight"/>
 
-    <property name="app.runtime.archs" value="x86_64"/>
-    <property name="app.runtime.system.min" value="10.9"/>
+    <property name="app.runtime.archs" value="'x86_64 arm64'"/>
+    <property name="app.runtime.system.min" value="10.12"/>
+    <property name="app.runtime.args"
+              value="-client --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/sun.security.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -Djava.library.path=$APP_PACKAGE/Contents/Frameworks -Djna.boot.library.path=$APP_PACKAGE/Contents/Frameworks -Djna.library.path=$APP_PACKAGE/Contents/Frameworks -Djna.nounpack=true -Djava.awt.headless=true -Dsun.jnu.encoding=utf-8 -Dfile.encoding=utf-8 -Dsun.io.useCanonCaches=false -DLog4jContextSelector=org.apache.logging.log4j.core.selector.BasicContextSelector -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -XX:+UseStringDeduplication"/>
 
     <property name="build.xcodeoptions.default"
-              value="JAVA_HOME=${java.home} SYMROOT=${build} SDKROOT=macosx ARCHS=${app.runtime.archs} MACOSX_DEPLOYMENT_TARGET=${app.runtime.system.min}"/>
+              value="CODE_SIGNING_ALLOWED=NO CODE_SIGNING_REQUIRED=NO JVM_RUNTIME_ARGS='${app.runtime.args}' JAVA_HOME=${java.home} SYMROOT=${build} SDKROOT=macosx ARCHS=${app.runtime.archs} MACOSX_DEPLOYMENT_TARGET=${app.runtime.system.min}"/>
 
     <condition property="build.xcodeoptions"
                value="${build.xcodeoptions.default} SPARKLEFEED='https://version.cyberduck.io/${sparkle.feed}/changelog.rss' INFOPLIST_PREPROCESSOR_DEFINITIONS=SPARKLE_BUILD"
@@ -97,101 +99,6 @@
         </antcall>
     </target>
 
-    <target name="notarize">
-        <taskdef name="groovy" classname="org.codehaus.groovy.ant.Groovy"/>
-        <groovy>
-            <arg line="${env.NOTARIZATION_USER} ${env.NOTARIZATION_PW}"/>
-            <![CDATA[
-                    class PlistUtility {
-                        static parseXmlPlistText(String text) {
-                            def parser = new XmlParser(false, false, true)
-                            parser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false)
-
-                            def xml = parser.parseText(text)
-
-                            assert xml.name() == "plist"
-
-                            def parseNode
-                            parseNode = { node ->
-                                def childNodes = node."*"
-                                switch (node.name()) {
-                                    case "dict":
-                                        def dict = [:]
-                                        for (int i = 0; i < childNodes.size(); i += 2) {
-                                            assert childNodes[i].name() == "key"
-                                            dict[childNodes[i].text().trim()] = parseNode(childNodes[i + 1])
-                                        }
-                                        return dict
-                                    case "array":
-                                        return childNodes.collect(parseNode)
-                                    case "string":
-                                        return node.text()
-                                    case "integer":
-                                        return Integer.parseInt(node.text())
-                                    case "date":
-                                        return Date.parse("yyyy-MM-dd'T'HH:mm:ss'Z'", node.text())
-                                    case "false":
-                                        return false
-                                    case "true":
-                                        return true
-                                    default:
-                                        assert false
-                                }
-                            }
-                            return parseNode(xml."*"[0])
-                        }
-                    }
-
-                    ant.echo "Start notarizing"
-                    def notarize = "/usr/bin/xcrun altool --primary-bundle-id ch.sudo.cyberduck --notarize-app --output-format xml -f ${properties['notarize.archive.upload']} -t osx -u ${args[0]} -p ${args[1]}"
-                    ant.echo "$notarize"
-                    def nproc = notarize.execute()
-                    nproc.waitFor()
-                    if (nproc.exitValue() != 0) {
-                        ant.fail "Error notarizing (${nproc.exitValue()}) : ${nproc.err.text} - ${nproc.in.text}"
-                    }
-                    def plist = PlistUtility.parseXmlPlistText(nproc.in.text)
-                    def requestId = plist['notarization-upload']['RequestUUID']
-                    ant.echo "RequestUUID is ${requestId}"
-
-                    Thread.sleep(30000)
-                    ant.echo "Start polling status"
-                    def check = "/usr/bin/xcrun altool --notarization-info ${requestId} --output-format xml -u ${args[0]} -p ${args[1]}"
-                    ant.echo "$check"
-                    def exit = false
-                    def trials = 60
-                    def status
-                    while (!exit){
-                        def cproc = check.execute()
-                        cproc.waitFor()
-                        if (cproc.exitValue() != 0) {
-                            ant.fail "Error notarizing (${cproc.exitValue()}) : ${cproc.err.text} - ${cproc.in.text}"
-                        }
-                        plist = PlistUtility.parseXmlPlistText(cproc.in.text)
-                        status = plist['notarization-info']['Status']
-                        ant.echo "Current status is '${status}'"
-                        exit = status != 'in progress'
-                        if (--trials == 0) {
-                            ant.fail "Number of trials exceeded - failing."
-                        }
-                        Thread.sleep(10000)
-                    }
-                    if (status == 'success') {
-                        ant.echo "Staple ticket"
-                        def stapler = "/usr/bin/xcrun stapler staple -v ${properties['notarize.archive.staple']}"
-                        def sproc = stapler.execute()
-                        sproc.waitFor()
-                        if (sproc.exitValue() != 0) {
-                            ant.fail "Error stapling: ${sproc.err.text}"
-                        }
-                        ant.echo "Notarization done."
-                    } else {
-                        ant.fail "Notarization failed with status ${status}"
-                    }
-                ]]>
-        </groovy>
-    </target>
-
     <target name="package" depends="version">
         <property name="bundle.archive.basename" value="${app.name}-${version}.${revision}"/>
         <property name="bundle.archive.zip" value="${bundle.archive.basename}.zip"/>
@@ -219,10 +126,17 @@
             <arg value="-o"/>
             <arg value="pipefail"/>
             <arg value="-c"/>
-            <arg
-                value="openssl dgst -sha1 -binary '${build.deploy}/${bundle.archive.zip}' | openssl dgst -sha1 -sign ${www.update}/private.pem | openssl enc -base64"/>
+            <arg value="openssl dgst -sha1 -binary '${build.deploy}/${bundle.archive.zip}' | openssl dgst -sha1 -sign ${www.update}/private.pem | openssl enc -base64"/>
         </exec>
         <echo message="DSASIGNATURE=${signature.dsa}"/>
+        <echo message="Calculating ed25519 signature..."/>
+        <exec dir="${home}" executable="sh" outputproperty="signature.ed25519" failonerror="true">
+            <arg value="-o"/>
+            <arg value="pipefail"/>
+            <arg value="-c"/>
+            <arg value="openssl pkeyutl -sign -inkey ${www.update}/private-ed25519.pem -rawin -in '${build.deploy}/${bundle.archive.zip}' | openssl enc -base64 -A"/>
+        </exec>
+        <echo message="EDSIGNATURE=${signature.ed25519}"/>
         <echo message="MD5SUM=${archive.md5}"/>
         <copy todir="${build.deploy}" overwrite="true">
             <fileset dir="${www.update}">
@@ -240,15 +154,14 @@
             <replacefilter token="${HASH}" value="${hash}"/>
             <replacefilter token="${VERSION}" value="${version}"/>
             <replacefilter token="${DSASIGNATURE}" value="${signature.dsa}"/>
+            <replacefilter token="${EDSIGNATURE}" value="${signature.ed25519}"/>
             <replacefilter token="${COPYRIGHT}" value="${copyright}"/>
             <replacefilter token="${MACOSX_DEPLOYMENT_TARGET}" value="${app.runtime.system.min}"/>
         </replace>
         <echo message="Building ${build.deploy}/${bundle.archive.pkg}"/>
-        <echo
-            message="Code signing ${app.bundle} with certificate ${installer.certificate} from ${installer.keychain}"/>
-        <exec dir="${build.deploy}" executable="/usr/bin/productbuild" spawn="false" failonerror="true">
-            <arg
-                line="--component ${app.bundle} /Applications --version ${version} --sign '${installer.certificate}' --keychain ${installer.keychain} ${build.deploy}/${bundle.archive.pkg}"/>
+        <echo message="Code signing ${app.bundle} with certificate ${installer.certificate} from ${installer.keychain}"/>
+        <exec dir="${build.deploy}" executable="/usr/bin/xcrun" spawn="false" failonerror="true">
+            <arg line="productbuild --component ${app.bundle} /Applications --version ${version} --sign '${installer.certificate}' --keychain ${installer.keychain} ${build.deploy}/${bundle.archive.pkg}"/>
         </exec>
         <antcall target="notarize" unless:true="${skipNotarize}">
             <param name="notarize.archive.upload" value="${build.deploy}/${bundle.archive.pkg}"/>
